--- a/exercises.html
+++ b/exercises.html
@@ -180,7 +180,7 @@
             href="https://github.com/cofinoa/Introduction-to-Python/issues/new?title=Issue%20on%20page%20%2Fexercises.html&body=Your%20issue%20content%20here."><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Open an issue"><i class="fas fa-lightbulb"></i>open issue</button></a>
-        <a class="edit-button" href="https://github.com/cofinoa/Introduction-to-Python/edit/master/exercises.md"><button
+        <a class="edit-button" href="https://github.com/cofinoa/Introduction-to-Python/edit/main/exercises.md"><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Edit this page"><i class="fas fa-pencil-alt"></i>suggest edit</button></a>
     </div>
@@ -259,7 +259,7 @@
         requestKernel: true,
         binderOptions: {
             repo: "cofinoa/Introduction-to-Python",
-            ref: "master",
+            ref: "main",
         },
         codeMirrorConfig: {
             theme: "abcdef",
