--- a/python_workflow.html
+++ b/python_workflow.html
@@ -181,7 +181,7 @@
             href="https://github.com/cofinoa/Introduction-to-Python/issues/new?title=Issue%20on%20page%20%2Fpython_workflow.html&body=Your%20issue%20content%20here."><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Open an issue"><i class="fas fa-lightbulb"></i>open issue</button></a>
-        <a class="edit-button" href="https://github.com/cofinoa/Introduction-to-Python/edit/master/python_workflow.ipynb"><button
+        <a class="edit-button" href="https://github.com/cofinoa/Introduction-to-Python/edit/main/python_workflow.ipynb"><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Edit this page"><i class="fas fa-pencil-alt"></i>suggest edit</button></a>
     </div>
@@ -201,7 +201,7 @@
         aria-label="Launch interactive content"><i class="fas fa-rocket"></i></button>
     <div class="dropdown-buttons">
         
-        <a class="binder-button" href="https://mybinder.org/v2/gh/cofinoa/Introduction-to-Python/master?urlpath=lab/tree/python_workflow.ipynb"><button type="button"
+        <a class="binder-button" href="https://mybinder.org/v2/gh/cofinoa/Introduction-to-Python/main?urlpath=lab/tree/python_workflow.ipynb"><button type="button"
                 class="btn btn-secondary topbarbtn" title="Launch Binder" data-toggle="tooltip"
                 data-placement="left"><img class="binder-button-logo"
                     src="_static/images/logo_binder.svg"
@@ -792,7 +792,7 @@ d_names[Perenganito] = 3
         requestKernel: true,
         binderOptions: {
             repo: "cofinoa/Introduction-to-Python",
-            ref: "master",
+            ref: "main",
         },
         codeMirrorConfig: {
             theme: "abcdef",
